samples/_failures_safe/1761081528_83089b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_62114042.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_62114042.c:143:9: error: expected expression at end of input
  143 |         for (int j =
      |         ^~~
./samples/SAFE/__tmp_62114042.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_62114042.c:143:9: error: expected declaration or statement at end of input
